small changes to loading and hiding card when search returns an error v1.3

--- a/index-movie.html
+++ b/index-movie.html
@@ -26,7 +26,20 @@
 </header>
 <main class="container mb-5">
     <h1 id="carouselHead" class="text-center mb-3">Chosen by You</h1>
-    <div class="row justify-content-center mt-4">
+    <div class="d-flex justify-content-center">
+        <div class="lds-grid">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div id="carousel-display" class="row d-none justify-content-center mt-4">
         <div id="carouselExampleCaptions" class="carousel slide slider row justify-content-center"
              data-ride="carousel">
             <ol class="carousel-indicators">
