updated card look v1.5

--- a/index-movie.html
+++ b/index-movie.html
@@ -19,7 +19,7 @@
 <header>
     <div class="jumbotron jumbotron-fluid" id="jumbo">
         <div class="container-fluid text-sm-center text-md-right">
-            <h1 id="logo" class="display-4 mr-md-5"><img class="mr-3" src="img/rc-car.png" id="rc-car">RC STUDIOS</h1>
+            <h1 id="logo" class="display-4 mr-md-5"><img class="mr-3 rounded-circle p-2" src="img/rc-car.png" id="rc-car">RC STUDIOS</h1>
             <p class="lead"></p>
         </div>
     </div>
