Responsiveness small fixes and other small fixes to genre display on card v 1.6111

--- a/index-movie.html
+++ b/index-movie.html
@@ -100,17 +100,17 @@
         <!--        Movie Display-->
         <div class="card mb-5 d-none cardTog" id="des-pane"><!--style="max-width: 540px;"-->
             <div class="row h-100 no-gutters">
-                <div class="col-sm-5">
+                <div class="col-sm-6 col-md-5">
                     <img id="cardPoster" class="card-img h-100" alt="Movie Picture">
                 </div>
-                <div class="col-sm-7 darker">
+                <div class="col-sm-6 col-md-7 darker">
                     <div class="card-body card-main h-100" data-serv="">
                         <div class="row ml-3">
                             <h1 id="title" class="card-title mr-auto"></h1>
                             <div id="rating-box" class="mr-3"><small id="rating"></small></div>
                         </div>
                         <div class="row justify-content-center m-3">
-                            <p id="genre" class="card-text"></p>
+                            <p id="genre" class="card-text d-flex flex-wrap justify-content-center"></p>
                         </div>
                         <div class="row justify-content-center m-3" id="card-paragraph">
                             <p id="info" class="card-text"></p>
